fix( library ): intersecting library's indicator on mobile devices
    - decrease library indicator's height
    - use ( isIntersecting ) property insead of ( intersectionRatio )

--- a/src/style.css
+++ b/src/style.css
@@ -266,8 +266,8 @@ section#my-works {
     &__viewport-indicator {
 
       position: absolute;
-      width: 95vw;
-      height: 95vh;
+      width: 90vw;
+      height: 80vh;
       margin-top: -15px;
       pointer-events: none;
 
